After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681446 - gtkdnd memory leak
gtkdnd memory leak
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.5.x
Other Linux
: Normal major
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-08-08 12:27 UTC by ammonkey
Modified: 2013-04-14 00:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix gtk_drag_set_icon_surface mem leak (391 bytes, patch)
2012-08-08 12:27 UTC, ammonkey
reviewed Details | Review
updated git format-patch (688 bytes, patch)
2012-08-08 17:11 UTC, ammonkey
none Details | Review

Description ammonkey 2012-08-08 12:27:04 UTC
Created attachment 220666 [details] [review]
fix gtk_drag_set_icon_surface mem leak

Hello,

I found a memory leak in gtkdnd gtk_drag_set_icon_surface, the cairo pattern is never destroyed. see the attached patch.
Comment 1 Emmanuele Bassi (:ebassi) 2012-08-08 14:43:28 UTC
Review of attachment 220666 [details] [review]:

nice catch!

it would be great if you attached a patch generated by git format-patch, or by git bz, so that we could credit you properly.

thanks again!
Comment 2 ammonkey 2012-08-08 17:11:32 UTC
Created attachment 220705 [details] [review]
updated git format-patch

here we go!
Comment 3 ammonkey 2013-04-13 12:20:01 UTC
so nobody interested to commit a trivial fix? nobody interested to fix a memory leak in gtk? this patches has been ignored for 2 release now...
Comment 4 ammonkey 2013-04-14 00:32:56 UTC
thank you