fix mem leak in gtk_drag_set_icon_surface, destroy pattern

https://bugzilla.gnome.org/show_bug.cgi?id=681446